Nueva forma de poder filtrar las tablas, implemtada en la vista rrhh